Bug 278545 - PPT Filter adds fields that are not in the original document
Summary: PPT Filter adds fields that are not in the original document
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/ppt (other bugs)
Version First Reported In: SVN
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-26 12:34 UTC by Arjen Hiemstra
Modified: 2011-08-15 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test document. (594.50 KB, application/octet-stream)
2011-07-26 12:34 UTC, Arjen Hiemstra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arjen Hiemstra 2011-07-26 12:34:03 UTC
Created attachment 62206 [details]
Test document.

Version:           svn (using Devel) 
OS:                Linux

When opening the attached file in Stage, the second and further slides will contain two boxes, one with the date and one empty. These are not in the source document.

Reproducible: Always

Steps to Reproduce:
Open the document in Stage.
Navigate to the second slide.

Actual Results:  
Two boxes can be seen at the bottom of the slide.

Expected Results:  
No additional boxes are visible.
Comment 1 Matus Uzak 2011-08-15 17:42:08 UTC
Git commit 876482e93bc992f4c9aa37f35ea7223493f08f49 by Matus Uzak.
Committed on 15/08/2011 at 19:38.
Pushed by uzak into branch 'master'.

libmso: Updated processing of line style properties.

CCBUG:278545

M  +8    -7    filters/libmso/ODrawToOdf.cpp

http://commits.kde.org/calligra/876482e93bc992f4c9aa37f35ea7223493f08f49
Comment 2 Matus Uzak 2011-08-15 17:42:08 UTC
Git commit c4668833df820ff01044edeaec206a3b3df7e51a by Matus Uzak.
Committed on 15/08/2011 at 19:40.
Pushed by uzak into branch 'master'.

PPT:Updated processing of the date field for masters.

BUG:278545

M  +7    -3    filters/stage/powerpoint/PptToOdp.cpp

http://commits.kde.org/calligra/c4668833df820ff01044edeaec206a3b3df7e51a