PPT:Updated processing of the date field for masters.

BUG:278545